--- a/css/header_style.css
+++ b/css/header_style.css
@@ -17,7 +17,7 @@ ul.header-list {
 
 .header-list>li {
     list-style-type: none;
-    margin-right: 27px;
+    margin-right: 30px;
 }
 
 
@@ -39,5 +39,10 @@ ul.header-list {
 h1 {
     font-size: 15px;
     padding: 11px;
-    margin-left: 10px;
+    margin-left: 7px;
+}
+
+.container-photo {
+    width: 49%;
+
 }
