--- a/css/shared.css
+++ b/css/shared.css
@@ -6,12 +6,13 @@
 }
 
 .centering-container {
+    position: relative;
     width: 1100px;
     margin: 0 auto;
 }
 
 .green_impact {
-color: #27C7AD;
+    color: #27C7AD;
 }
 
 .green_button {
@@ -24,6 +25,7 @@ color: #27C7AD;
     color: white;
     text-align: center;
 
+    cursor: pointer;
     background-color: #27C7AD;
     border-radius: 5px;
     border: 0;
@@ -36,4 +38,3 @@ color: #27C7AD;
     width: 121px;
     background-color: #27C7AD;
 }
-
